# fiction-claude

./: .gitignore  _check.txt  _titles.txt  b_validate_tasks.yaml  eval5_tasks.yaml  prose_check.json  pyproject.toml  repair_diff.txt  requirements.txt  stage0_tasks.yaml  tasks_reval.yaml  validation_tasks.yaml  validation_tasks_A.yaml  validation_tasks_B.yaml  validation_tasks_C.yaml
.claude/: settings.json
assets/: defect_bank.jsonl  hfl.jsonl  program_state.json
config/: models.yaml  pipeline.yaml
docs/: README.md  USAGE.md
fictions_source/: CPBGX00192灵气复苏：开局无限合成.txt  CPBXN00188开局冰川探墓，你管这叫娱乐主播.txt  CPBXN00233你当我傻？末世你带娃找我复合.txt  CPBXN00276全球陆沉：我开超级战舰横扫末世.txt  DPBXN00507狂医战神.txt  DYBXS00073 桃源渔村.txt  README.md  ZTGGY02021摄政王妃.txt  ZTGGY02336空间：农女种田从逃荒开始.txt  ZTGXY01825误嫁豪门，战神老公蓄意偏宠.txt  ZYGGX02936第一符术师.txt  ZYGGY02071空间神医山里糙汉会疼人.txt  ZYGGY02079买来的禁欲夫君是太子.txt  ZYGGY02196崽崽惊呆！娘亲她成了逃荒路上的美食供应商.txt  ZYGGY02252穿成萌娃去流放？不怕，我把皇宫抄空了！.txt  ZYGWM06026末世重生，我疯狂囤物资逆袭大佬.txt  ZYGXN01960六零饥荒年：我靠团购娇养冷面知青.txt  ZYGXY01824危险关系：禁欲上司夜痴缠.txt  ZYGXY01847冷战三年，离婚当日纪总哭红了眼.txt  ZYGXY01876宠爆！大小姐归来，亲哥们跪唱征服.txt  ZYGXY01893怀孕命剩三月，傅爷说要回家过夜.txt  ZYGXY02032重生在高考：带着糙汉发家致富.txt  ZYGXY02151对照组女配在军旅综艺爆红了.txt
output/: README.md  _crash_CPBGX00031我真不是大罗金仙(带房穿越修.txt  _crash_ZYGGX02936第一符术师.txt  batch_summary.json  batch_summary.md  batch_summary_linear5.json  batch_summary_r11.md  batch_summary_r12.md  batch_summary_r13.md  batch_summary_r14.md  gen_validate_summary.json  m0_spine_reconcile.json  m1_compare.json  pregrade_map.json  pregrade_map.md
prototype/: HIKI 产线监视台.html
scripts/: README.md  (+48 more)
(+949 files in other folders)
