[project]
name = "hiki-fiction-rewrite"
version = "0.1.0"
description = "全自动中文网文复写/压缩引擎"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."] # src→`from hiki import ...`; .→`from web.backend import ...`(CI 跑 `pytest` 不含 cwd)
addopts = "-q"
markers = ["api: 需要真实 DeepSeek API(默认不跑;用 -m api 显式选)"]
